syntax = "proto3";

package buf.v1;

import "google/protobuf/descriptor.proto";

extend google.protobuf.FileOptions {
  string file_option = 10101;
}
